# LFNS_paper

./: CMakeLists.txt  EvaluateLikelihoodSetup.cpp  EvaluateLikelihoodSetup.h  GeneralSetup.cpp  GeneralSetup.h  LFNSSetup.cpp  LFNSSetup.h  LikelihoodSetup.cpp  LikelihoodSetup.h  MCMCSetup.cpp  MCMCSetup.h  README.txt  SimulationSetup.cpp  SimulationSetup.h  evaluate_likelihood.cpp  install_LFNS.sh  lfns_mpi.cpp  lfns_seq.cpp  mcmc.cpp  plotSystem.m  simulate.cpp  test_BEestimation.cpp  test_lfns.cpp  test_models.cpp  test_particle_filter.cpp  test_sampler.cpp  test_simulator.cpp
Inference_results/: plotBE.m
Inference_results/LacGfp/N500_H500/: lac_dead_points.txt  lac_dead_points_log_likelihoods.txt  lac_live_points_0.txt  lac_live_points_0_log_likelihoods.txt  lac_live_points_1.txt  lac_live_points_10.txt  lac_live_points_100.txt  lac_live_points_100_log_likelihoods.txt  lac_live_points_101.txt  lac_live_points_101_log_likelihoods.txt  lac_live_points_102.txt  lac_live_points_102_log_likelihoods.txt  lac_live_points_103.txt  lac_live_points_103_log_likelihoods.txt  lac_live_points_104.txt  lac_live_points_104_log_likelihoods.txt  lac_live_points_105.txt  lac_live_points_105_log_likelihoods.txt  lac_live_points_106.txt  lac_live_points_106_log_likelihoods.txt  lac_live_points_107.txt  lac_live_points_107_log_likelihoods.txt  lac_live_points_108.txt  lac_live_points_108_log_likelihoods.txt  lac_live_points_109.txt  lac_live_points_109_log_likelihoods.txt  lac_live_points_10_log_likelihoods.txt  lac_live_points_11.txt  lac_live_points_110.txt  lac_live_points_110_log_likelihoods.txt  lac_live_points_111.txt  lac_live_points_111_log_likelihoods.txt  lac_live_points_112.txt  lac_live_points_112_log_likelihoods.txt  lac_live_points_113.txt  (+319 more)
cmake/Modules/: FindDPGMM.cmake  FindEigen3.cmake  FindSundials.cmake  Findmuparser.cmake
examples/: plotSystem.m  readModelDescription.m
examples/LacGfp/: lac_config_file.xml  lacgfp_100_trajectories.txt  lacgfp_data.txt  lacgfp_data_times.txt  lacgfp_initial_states.txt  lacgfp_measurement.txt  lacgfp_model.txt
examples/antithetic_model/: antithetic_config_file.xml  antithetic_initial.txt  antithetic_model.txt
examples/birth_death/: bd_config_file.xml  bd_data.txt  bd_initial.txt  bd_measurement.txt
examples/birth_death_one_param/: bd_config_file.xml  bd_data_times.txt  bd_measurement.txt  bd_model.txt
examples/burst_model/: burst_config.xml  burst_model.txt  initial.txt  measurement.txt  measurement_mult.txt
examples/expression_model/: expression_config_file.xml  expression_data.txt  expression_initial.txt  expression_measurement.txt  expression_model.txt
required_packages/DP-GMM/: CMakeLists.txt  README.txt
required_packages/DP-GMM/src/: AdaptiveRejectionSampler.cpp  BoostDistributions.h  DPGMMEstimator.cpp  DPGMMEstimator.h  DPGMMLogger.cpp  DPGMMLogger.h  DPMixtureComponent.cpp  DataReader.cpp  EigenSerialization.h  EstimationMixtureComponent.cpp  EstimationMixtureComponent.h  EstimationOptions.cpp  EstimationOptions.h  GaussMixtureComponent.h  HyperParameters.cpp  HyperParameters.h  IOUtils.cpp  IOUtils.h  IndicatorParameters.cpp  IndicatorParameters.h  LogConcaveFunction.h  MatrixTypes.h  MultivariateNormalDistribution.h  PostLogAlpha.cpp  PostLogAlpha.h  PostLogBeta.cpp  PostLogBeta.h  WishartDistribution.h  estimate_density.cpp
required_packages/DP-GMMv2/: README.txt  prepare_env_Brutus.sh
required_packages/muparser-2.2.5/: Makefile  config.status
src/LFNS/: DeadParticleSet.cpp  DeadParticleSet.h  LFNS.cpp  LFNS.h  LFNSLogger.cpp  LFNSLogger.h  LFNSParticle.cpp  LFNSParticle.h  LFNSSampler.cpp  LFNSSampler.h  LFNSSettings.cpp  LFNSSettings.h  LiveParticleSet.cpp  LiveParticleSet.h  PosteriorEstimator.cpp  PosteriorEstimator.h  SliceSampler.cpp  SliceSampler.h
src/MCMC/: MCMC.cpp  MCMC.h  MCMCLogger.cpp  MCMCLogger.h  MCMCParticles.cpp  MCMCParticles.h  MCMCSampler.cpp  MCMCSampler.h  MCMCSettings.h
src/base/: EigenMatrices.h  EigenSerialization.h  IoUtils.cpp  IoUtils.h  MathUtils.cpp  MathUtils.h  MultivariateNormal.cpp  MultivariateNormal.h  RandomDistributions.h  StoppingCriterion.h  Utils.cpp  Utils.h
src/io/: ConfigFileInterpreter.cpp  ConfigFileInterpreter.h  InitialValueReader.cpp  InitialValueReader.h  IoSettings.h  MeasurementModelReader.cpp  MeasurementModelReader.h  ModelReactionReader.cpp  ModelReactionReader.h  ParserReader.cpp  ParserReader.h  TxtFileReader.cpp  TxtFileReader.h  XmlFileReader.cpp  XmlFileReader.h  XmlPropertyMap.cpp  XmlPropertyMap.h
src/models/: BaseData.cpp  BaseData.h  BaseObject.cpp  BaseObject.h  ChemicalReactionNetwork.cpp  ChemicalReactionNetwork.h  FullModel.cpp  FullModel.h  InitialValueData.cpp  InitialValueData.h  InitialValueProvider.cpp  InitialValueProvider.h  InputPulse.cpp  InputPulse.h  MeasurementModel.cpp  MeasurementModel.h  MeasurementModelData.cpp  MeasurementModelData.h  ModelExceptions.h  ModelReactionData.cpp  ModelReactionData.h  ModelSettings.h  ParserBaseObject.cpp  ParserBaseObject.h  ParserData.cpp  ParserData.h
src/options/: CommandLineOptions.cpp  CommandLineOptions.h  ComputeLikelihoodOptions.cpp  ComputeLikelihoodOptions.h  DataOptions.h  LFNSOptions.cpp  LFNSOptions.h  MCMCOptions.cpp  MCMCOptions.h  SimulationOptions.cpp  SimulationOptions.h
src/particle_filter/: MultLikelihoodEval.h  ParticleFilter.cpp  ParticleFilter.h  ParticleFilterSettings.h  SmcParticle.h  SmcParticleSet.cpp  SmcParticleSet.h
src/sampler/: DensityEstimation.cpp  DensityEstimation.h  DpGmmSampler.cpp  DpGmmSampler.h  EllipsoidSampler.cpp  EllipsoidSampler.h  GaussianSampler.cpp  GaussianSampler.h  KernelDensityEstimation.cpp  KernelDensityEstimation.h  KernelSupportEstimation.cpp  KernelSupportEstimation.h  RejectionSupportSampler.cpp  RejectionSupportSampler.h  Sampler.h  SamplerSettings.h  SliceSampler.cpp  SliceSampler.h  UniformSampler.cpp  UniformSampler.h
src/simulator/: SimulationSettings.h  Simulator.h  SimulatorExceptions.h  SimulatorHybrid.cpp  SimulatorHybrid.h  SimulatorOde.cpp  SimulatorOde.h  SimulatorSsa.cpp  SimulatorSsa.h  StoppingCriterion.h
(+1074 files in other folders)
